# cocoindex-code-dafny

./: LICENSE  README.md  pyproject.toml
src/cocoindex_code_dafny/: __init__.py
